tests/snapshots/serde__de_i32.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1"
---
=== VALUE ===
I32(1)

=== HEAP ===
Heap {}

