tests/snapshots/serde__de_i32_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n2147483647"
---
=== VALUE ===
I32(2147483647)

=== HEAP ===
Heap {}

