tests/snapshots/serde__de_i32_min.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n-2147483648"
---
=== VALUE ===
I32(-2147483648)

=== HEAP ===
Heap {}

