tests/snapshots/serde__de_i32_neg.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1000"
---
=== VALUE ===
I32(1000)

=== HEAP ===
Heap {}

