tests/snapshots/serde__de_i32_zero.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n0"
---
=== VALUE ===
I32(0)

=== HEAP ===
Heap {}

