tests/snapshots/serde__de_int16array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array([-1])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            255,
            255,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Int16Array,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

